Mask Expand crash in Eevee #86422

Closed
opened 2021-03-09 12:07:26 +01:00 by Julien Kaspar · 4 comments
Member

System Information
Operating system: Linux-5.4.0-66-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-09 08:45, hash: 07a9d39f57

Short description of error
When working on some meshes with open boundaries and using mask expand while in Eevee, Blender will crash,
Not all objects with open boundaries caused this issue for me but I got to reproduce it relyably.

Exact steps for others to reproduce the error

  • Delete the top & bottom face of the default cube
  • Subdivide the default cube
  • Apply the subdiv modifier
  • Go into material preview mode
  • In sculpt mode use Shift + A for mask expand
  • Blender will crash

If you have more modifiers enabled & visible and you don't use the options toggle "Use Deform Only" it will not crash.

**System Information** Operating system: Linux-5.4.0-66-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-09 08:45, hash: `07a9d39f57` **Short description of error** When working on some meshes with open boundaries and using mask expand while in Eevee, Blender will crash, Not all objects with open boundaries caused this issue for me but I got to reproduce it relyably. **Exact steps for others to reproduce the error** - Delete the top & bottom face of the default cube - Subdivide the default cube - Apply the subdiv modifier - Go into material preview mode - In sculpt mode use Shift + A for mask expand - Blender will crash If you have more modifiers enabled & visible and you don't use the options toggle "Use Deform Only" it will not crash.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

This issue was referenced by 7d827d0e9e

This issue was referenced by 7d827d0e9e1a396580be988313bfd9ee4273a517
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2021-03-09 21:22:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86422
No description provided.